workspace-sf/force-app/main/default/objects/IntegracaoAS__mdt/IntegracaoAS__mdt.object-meta.xml
<CustomObject>
    <description>Metadado para integração entre a aplicação salesforce PortoVida e o sistema AS</description>
    <label>IntegracaoAS</label>
    <pluralLabel>IntegracaoASs</pluralLabel>
</CustomObject>