workspace-sf/force-app/main/default/objects/IntegracaoAS__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint para chamada da Integração AS</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>