workspace-sf/force-app/main/default/objects/IntegracaoAS__mdt/fields/NomeCredencial__c.field-meta.xml
<CustomField>
    <fullName>NomeCredencial__c</fullName>
    <description>Identificação da Credencial para a chamada da Integração AS</description>
    <label>Nome da Credencial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>