workspace-sf/force-app/main/default/objects/IntegracaoAS__mdt/fields/NomeToken__c.field-meta.xml
<CustomField>
    <fullName>NomeToken__c</fullName>
    <description>Token para chamada da Integração AS</description>
    <label>Nome do Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>