workspace-sf/force-app/main/default/objects/IntegracaoAS__mdt/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <description>Setor para chamada da Integração AS</description>
    <label>Setor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>