workspace-sf/force-app/main/default/objects/IntegracaoAS__mdt/fields/Tarefa__c.field-meta.xml
<CustomField>
    <fullName>Tarefa__c</fullName>
    <description>Código da Tarefa para chamada da Integração AS</description>
    <label>Tarefa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>