workspace-sf/force-app/main/default/objects/IntegracaoAS__mdt/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <description>Unidade para a chamada da Integração AS</description>
    <label>Unidade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>